@@ -1,4 +1,4 @@
-Beta 1: 
+Beta 1:
 - Initial Beta Release
 
 Beta 2:
@@ -12,3 +12,10 @@ Beta 4
 - InfoPanel
 - More Extras
 - Better Mod Support
+- Better Save System
+
+Beta 5
+- Even Better Mod Support
+- A "Base Mod"
+- Click Multiplier Saves
+- Multiplier From Cases Will Stack
